fixed bug with pages not properly styling and not showing hamburgetr menu, enhanced sevices page appearance, fixed same named functions, updated all footers and navbars to have the same look

--- a/style-medium.css
+++ b/style-medium.css
@@ -1,4 +1,4 @@
-@media screen and (max-width:1500px) {
+@media screen and (min-width:1000px) and (max-width:1500px) {
 
 	/*#region Navigation Stuff*/
 	.navbar {
