--- a/style-small.css
+++ b/style-small.css
@@ -70,6 +70,7 @@
 
 	.navbar#column-nav {
 		display: none;
+		z-index: 3;
 		position: fixed;
 		top: 0;
 		left: 0;
@@ -140,11 +141,6 @@
 		align-content: stretch;
 	}
 
-	/* .navbar.footer nav {
-		display: flex;
-		height: 100%;
-	} */
-
 	.navbar.footer ul {
 		/* padding-left: 0; */
 		margin: 0;
@@ -173,6 +169,16 @@
 }
 
 @media screen and (max-width:1000px) {
+
+	/*#region Services Stuff*/
+	.services-container{
+		flex-direction: column;
+	}
+
+	.service-button{
+		margin-bottom: 3%;
+	}
+	/*#endregion*/
 
 	/*#region Service Description Stuff*/
 	.service-article {
